OpenCL interface dependency added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,9 @@ enable_testing()
 find_package(Threads)
 find_package(Vitis)
 find_package(IntelFPGAOpenCL)
+find_package(OpenCL)
+
+target_link_libraries(hlslib INTERFACE OpenCL::OpenCL)
 
 # Xilinx example setup and testing
 if(Vitis_FOUND AND Threads_FOUND)
